[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "VCF-kit"
dynamic = ["version"]
description = "Assorted utilities for the variant call format"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Daniel E. Cook", email = "danielecook@gmail.com" }
]
keywords = ["VCF", "variant", "caller", "format", "snps", "genetic", "variation", "genetics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "awesome-slugify",
    "matplotlib",
    "scipy",
    "numpy",
    "cython",
    "cyvcf2",
    "docopt",
    "biopython==1.77",
    "logzero",
    "biotite",
    "hmmlearn",
    "clint",
    "requests",
    "networkx",
    "intervaltree",
    "tabulate",
    "jinja2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-runner",
    "coveralls",
]

[project.scripts]
vk = "vcfkit.vk:main"

[project.urls]
Homepage = "https://www.github.com/andersenlab/vcf-kit"
Documentation = "https://vcf-kit.readthedocs.io/en/latest/?badge=latest"
Repository = "https://www.github.com/andersenlab/vcf-kit"
Issues = "https://www.github.com/andersenlab/vcf-kit/issues"

[tool.hatch.version]
path = "vcfkit/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/vcfkit",
]

[tool.hatch.build.targets.wheel]
packages = ["vcfkit"]
